k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    
    spec:
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: persistent-volume-claim
      containers:
        - name: postgresapp
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume
              subPath: postgres
