k8s/client-nodeport-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: client-nodeport-service
spec:
  type: NodePort
  selector:
    component: client
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31515
